--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '8000:80'
     volumes:
-      - /home/ubuntu/project/web:/var/www/html
+      - ${PROJECT_DIR}:/var/www/html
       - ./default.conf:/etc/nginx/conf.d/default.conf
     links:
       - php-fpm
@@ -15,7 +15,7 @@ services:
   php-fpm:
     image: php:8-fpm
     volumes:
-      - /home/ubuntu/project/web:/var/www/html
+      - ${PROJECT_DIR}:/var/www/html
   db:
     image: mariadb
     restart: always
